[package]
name = "order_book"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook"
path = "src/lib.rs"

#[bin]
#name = "orderbook"
#path = "src/bin.rs"

[dependencies]
tokio = {version="1.26.0", features=["macros", "rt-multi-thread"]}
tonic = "0.8.3"
prost = "0.11.8"

[build-dependencies]
tonic-build = "0.7"
