[package]
name = "order_book"
version = "0.1.0"
edition = "2021"

[lib]
name = "orderbook"
path = "src/lib.rs"

[[bin]]
name = "orderbook"
path = "src/bin.rs"

[dependencies]
tokio = {version="1.26.0", features=["macros", "rt-multi-thread"]}
tokio-stream = "0.1.12"
async-stream = "0.3.4"
tokio-native-tls = "0.3.1"
tonic = "0.8.3"
prost = "0.11.8"
async-trait = "0.1.53"
log = "0.4.17"
pretty_env_logger = "0.4.0"
serde = {version="1.0.152", features = ["derive"] }
serde_json = "1.0.93"
async-tungstenite = {version="0.20.0", features=["tokio-runtime", "tokio-native-tls"]}
futures = "0.3.26"
thiserror = "1.0.39"
enum-display-derive = "0.1.1"
clap = {version = "4.1.8", features = ["derive"]}

[build-dependencies]
tonic-build = "0.8.4"
